fix modal size on mobile using visual viewport

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,6 +4,7 @@
 :root {
   --primary-color: #F74C25;
   --line-height: 1.2;
+  --visual-viewport-height: 100vh;
   --minimum-space-from-edge: 20px;
   @media (min-width: 768px) {
     --minimum-space-from-edge: 40px;
@@ -97,7 +98,7 @@ span, a {
   position: absolute;
   display: none;
   width: 100%;
-  height: 100vh;
+  height: var(--visual-viewport-height);
   top: 0;
   left: 0;
   padding:50px;
@@ -105,7 +106,7 @@ span, a {
   form {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 100px);
+    height: calc(var(--visual-viewport-height) - 100px);
     justify-content: space-between;
     input[type=text] {
       background: none;
